<resources>

    <string name="app_name">App Lista Curso</string>

    <string name="aplicativo_lista_vip_curso_android">Aplicativo Lista VIP Curso Android</string>

    <string name="txt_hint_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_sobrenome">Sobrenome</string>
    <string name="txt_hint_nome_do_curso_desejado">Nome do Curso Desejado</string>
    <string name="txt_hint_telefone_de_contato">Telefone de Contato</string>

    <string name="finalizar">Finalizar</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>

</resources>