<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    
            <TextView
                android:id="@+id/textView_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="16dp"
                android:textAlignment="center"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPrimeiroNome"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:autofillHints="off"
                android:ems="10"
                android:hint="@string/txt_hint_primeiro_nome"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextSobrenome"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:autofillHints="off"
                android:ems="10"
                android:hint="@string/txt_hint_sobrenome"
                android:inputType="text" />

            <TextView
                android:id="@+id/textViewOrientacaoNomeCursoDesejado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/selecione_um_curso"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="168dp"
                tools:layout_editor_absoluteY="553dp" />

            <Spinner
                android:id="@+id/spinnerNomeCursoDesejado"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="520dp" />

            <EditText
                android:id="@+id/editTextTelefoneContato"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:autofillHints="off"
                android:ems="10"
                android:hint="@string/txt_hint_telefone_de_contato"
                android:inputType="text"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="16dp"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/btnLimpar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/limpar"
                    android:textStyle="bold|italic"
                    android:background="@color/btn_green" />

                <Button
                    android:id="@+id/btnSalvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salvar"
                    android:textStyle="bold|italic"
                    android:background="@color/btn_blue" />

                <Button
                    android:id="@+id/btnFinalizar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finalizar"
                    android:textStyle="bold|italic"
                    android:background="@color/btn_red" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>